Upgrade to Java 17 and convert various classes to records